--- a/index.css
+++ b/index.css
@@ -63,9 +63,16 @@ img {
   .nav-list a {
     display: block;
     font-size: 2.2rem;
-    padding: 2rem;
+    padding: 1rem;
   }
   
   .nav-list a:hover {
     background: var(--main-blue);
   }
+
+ #welcome-title{
+     padding-top: 3.2rem;
+     display: flex;
+     text-align: center;
+     margin: 20px;
+ }
