--- a/index.css
+++ b/index.css
@@ -1,36 +1,38 @@
-body{
+body {
+    font-family: 'Poppins', sans-serif;
     background-color: #595953;
-    font-size: 1.2rem; 
+    font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.4;
-    color: white;
-}
-h1{
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  text-align: center;
+    color: rgb(255, 255, 255);
 }
 
 h1 {
-  font-size: 6rem;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    text-align: center;
+}
+
+h1 {
+    font-size: 6rem;
 }
 
 h2 {
-  font-size: 4.2rem;
+    font-size: 3.2rem;
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: white;
+    text-decoration: none;
+    color: white;
 }
 
 img {
-  display: block;
-  width: 50%;
+    display: block;
+    width: 100%;
 }
 
 .nav {
@@ -43,36 +45,145 @@ img {
     background: black;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
     z-index: 10;
-  }
-  
-  .nav-list {
+}
+
+.nav-list {
     display: flex;
     margin-right: 2rem;
-  }
-  
-  @media (max-width: 28.75em) {
+}
+
+@media (max-width: 28.75em) {
     .nav {
-      justify-content: center;
+        justify-content: center;
     }
-  
     .nav-list {
-      margin: 0 1rem;
+        margin: 0 1rem;
     }
-  }
-  
-  .nav-list a {
+}
+
+.nav-list a {
     display: block;
     font-size: 2.2rem;
-    padding: 1rem;
-  }
-  
-  .nav-list a:hover {
-    background: var(--main-blue);
-  }
+    padding: 0.3rem;
+}
 
- #welcome-title{
-     padding-top: 3.2rem;
-     display: flex;
-     text-align: center;
-     margin: 20px;
- }
+.nav-list a:hover {
+    background: rgba(78, 184, 233, 0.774);
+}
+
+#welcome-title {
+    padding-top: 3.2rem;
+    display: flex;
+    text-align: center;
+    margin: 20px;
+}
+
+.flexbox-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.flexbox-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 25vw;
+    height: 25vw;
+    border-radius: 100%;
+}
+
+.box {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    border: 2px solid rgb(255, 255, 255);
+    flex-basis: content;
+}
+
+.title_box {
+    border: #ffffff 10px double;
+}
+
+.title_box #title {
+    position: relative;
+    top: -0.5em;
+    margin-left: 1em;
+    display: inline;
+    background-color: rgb(0, 0, 0);
+}
+
+.projects-section {
+    text-align: center;
+    padding: 10rem 2rem;
+}
+
+.projects-section-header {
+    max-width: 640px;
+    margin: 0 auto 2rem auto;
+    border-bottom: 0.1rem solid rgb(253, 253, 253);
+}
+
+@media (max-width: 28.75em) {
+    .projects-section-header {
+        font-size: 2rem;
+    }
+}
+
+
+/* "Automagic" image grid using no media queries */
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 4rem;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+}
+
+@media (max-width: 30.625em) {
+    .projects-section {
+        padding: 1rem;
+    }
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+.project {
+    background: gray;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    border-radius: 2px;
+}
+
+.code {
+    color: gray;
+    transition: color 0.3s ease-out;
+}
+
+.project:hover .code {
+    color: #4febde;
+}
+
+.project-image {
+    height: auto;
+    width: 100%;
+    object-fit: cover;
+}
+
+.project-title {
+    font-size: 1.4rem;
+    padding: 1rem 0.5rem;
+}
