--- a/index.css
+++ b/index.css
@@ -20,6 +20,9 @@ h1 {
 h2 {
     font-size: 3.2rem;
 }
+p {
+    font-size: 1.4rem;
+}
 
 ul {
     list-style: none;
@@ -125,7 +128,7 @@ img {
 }
 
 #content {
-    font-size: 1.9rem;
+    font-size: 1.5rem;
 }
 
 .projects-section {
