--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ h2 {
     font-size: 3.2rem;
 }
 p {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
 }
 
 ul {
@@ -55,12 +55,12 @@ img {
     margin-right: 2rem;
 }
 
-@media (max-width: 28.75em) {
+@media (max-width: 32.0em) {
     .nav {
         justify-content: center;
     }
     .nav-list {
-        margin: 0 1rem;
+        margin: 1 1rem;
     }
 }
 
@@ -116,13 +116,14 @@ img {
 
 .title_box {
     border: #ffffff 10px double;
+    margin: 1.5rem;
 }
 
 .title_box #title {
     position: relative;
     top: -0.2em;
-    margin-left: 0.5em;
-    font-size: 2rem;
+    margin-left: 0.1em;
+    font-size: 1.9rem;
     display: inline;
     background-color: rgba(0, 0, 0, 0);
 }
@@ -142,7 +143,7 @@ img {
     border-bottom: 0.1rem solid rgb(253, 253, 253);
 }
 
-@media (max-width: 28.75em) {
+@media (max-width: 32.0em) {
     .projects-section-header {
         font-size: 2rem;
     }
@@ -161,7 +162,7 @@ img {
     margin-bottom: 2rem;
 }
 
-@media (max-width: 30.625em) {
+@media (max-width: 32.0em) {
     .projects-section {
         padding: 1rem;
     }
@@ -194,4 +195,10 @@ img {
 .project-title {
     font-size: 1.4rem;
     padding: 1rem 0.5rem;
+}
+
+@media(max-width: 32.0em){
+    h2{
+        font-size: 1.4rem;
+    }
 }
