--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ a {
 
 img {
     display: block;
-    width: 100%;
+    max-width: 100vw;
 }
 
 .nav {
@@ -55,18 +55,19 @@ img {
     margin-right: 2rem;
 }
 
-@media (max-width: 32.0em) {
+@media (max-width: 1050px) {
     .nav {
         justify-content: center;
     }
     .nav-list {
-        margin: 1 1rem;
+        margin: 0 1rem;
+        margin-right:3rem;
     }
 }
 
 .nav-list a {
     display: block;
-    font-size: 2.2rem;
+    font-size: 2.0rem;
     padding: 0.3rem;
 }
 
@@ -143,7 +144,7 @@ img {
     border-bottom: 0.1rem solid rgb(253, 253, 253);
 }
 
-@media (max-width: 32.0em) {
+@media (max-width: 1050px) {
     .projects-section-header {
         font-size: 2rem;
     }
@@ -197,7 +198,7 @@ img {
     padding: 1rem 0.5rem;
 }
 
-@media(max-width: 32.0em){
+@media(max-width: 1050px){
     h2{
         font-size: 1.4rem;
     }
