--- a/index.css
+++ b/index.css
@@ -8,14 +8,15 @@ body {
 }
 
 h1 {
+    display: flex;
+    justify-content: center;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     text-align: center;
+    font-size: 3rem;
 }
 
-h1 {
-    font-size: 6rem;
-}
+
 
 h2 {
     font-size: 3.2rem;
@@ -52,6 +53,7 @@ img {
 
 .nav-list {
     display: flex;
+    margin: 0;
     margin-right: 2rem;
 }
 
@@ -76,9 +78,10 @@ img {
 }
 
 #welcome-title {
+    display: flex;
+    justify-content: center;
     padding-top: 3.2rem;
     display: flex;
-    text-align: center;
     margin: 20px;
 }
 
@@ -118,6 +121,10 @@ img {
 .title_box {
     border: #ffffff 10px double;
     margin: 1.5rem;
+}
+
+#info{
+    padding-top: 70px;
 }
 
 .title_box #title {
@@ -197,9 +204,41 @@ img {
     font-size: 1.4rem;
     padding: 1rem 0.5rem;
 }
+.contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 20vh;
+    padding: 0 2rem;
+    background: var(--main-gray);
+  }
+.contact-links {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 980px;
+    margin-top: 4rem;
+    margin: 2rem;
+    flex-wrap: wrap;
+  }
+  .contact-details {
+    font-size: 2.4rem;
+    text-shadow: 2px 2px 1px #1f1f1f;
+    transition: transform 0.3s ease-out;
+  }
+  
+  .contact-details:hover {
+    transform: translateY(8px);
+  }
 
 @media(max-width: 1050px){
     h2{
         font-size: 1.4rem;
+    }
+    h1{
+        font-size: 2rem;
     }
 }
