--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #595953;
+    background-color: #000000b9;
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.4;
@@ -120,6 +121,7 @@ img {
 
 .title_box {
     border: #ffffff 10px double;
+    background-color: gray;
     margin: 1.5rem;
 }
 
@@ -211,21 +213,21 @@ img {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 20vh;
-    padding: 0 2rem;
-    background: var(--main-gray);
+    height: 50vh;
+    padding: -10 1rem;
+    background: gray;
   }
 .contact-links {
     display: flex;
     justify-content: space-around;
     width: 100%;
     max-width: 980px;
-    margin-top: 4rem;
-    margin: 2rem;
+    margin-top: 3rem;
+
     flex-wrap: wrap;
   }
   .contact-details {
-    font-size: 2.4rem;
+    font-size: 1.6rem;
     text-shadow: 2px 2px 1px #1f1f1f;
     transition: transform 0.3s ease-out;
   }
