--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #595953;
-    background-color: #000000b9;
+    
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.4;
@@ -121,7 +121,7 @@ img {
 
 .title_box {
     border: #ffffff 10px double;
-    background-color: gray;
+    background-color: rgb(66, 46, 46);
     margin: 1.5rem;
 }
 
@@ -223,7 +223,6 @@ img {
     width: 100%;
     max-width: 980px;
     margin-top: 3rem;
-
     flex-wrap: wrap;
   }
   .contact-details {
