--- a/index.css
+++ b/index.css
@@ -144,13 +144,13 @@ img {
 
 .projects-section {
     text-align: center;
-    padding: 10rem 2rem;
+    padding: 5rem 2rem;
 }
 
 .projects-section-header {
     max-width: 640px;
-    margin: 0 auto 2rem auto;
-    border-bottom: 0.1rem solid rgb(253, 253, 253);
+    margin: 0 auto 1rem auto;
+    border-bottom: 0.1rem solid rgb(255, 255, 255);
 }
 
 @media (max-width: 1050px) {
@@ -208,12 +208,12 @@ img {
 }
 .contact-section {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 50vh;
+    height: 30vh;
     padding: -10 1rem;
     background: gray;
   }
@@ -222,11 +222,12 @@ img {
     justify-content: space-around;
     width: 100%;
     max-width: 980px;
-    margin-top: 3rem;
+    margin-top: 1rem;
+    margin: 2rem;
     flex-wrap: wrap;
   }
   .contact-details {
-    font-size: 1.6rem;
+    font-size: 1.7rem;
     text-shadow: 2px 2px 1px #1f1f1f;
     transition: transform 0.3s ease-out;
   }
