--- a/index.css
+++ b/index.css
@@ -120,8 +120,8 @@ img {
 }
 
 .title_box {
-    border: #ffffff 10px double;
-    background-color: rgb(66, 46, 46);
+    border: #ffffff00 10px double;
+    background-color: rgb(83, 47, 47);
     margin: 1.5rem;
 }
 
@@ -213,8 +213,8 @@ img {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 30vh;
-    padding: -10 1rem;
+    height: 20vh;
+    padding: -9 1rem;
     background: gray;
   }
 .contact-links {
@@ -222,14 +222,14 @@ img {
     justify-content: space-around;
     width: 100%;
     max-width: 980px;
-    margin-top: 1rem;
-    margin: 2rem;
+    margin-top: 2rem;
+    margin: 0rem;
     flex-wrap: wrap;
   }
   .contact-details {
     font-size: 1.7rem;
-    text-shadow: 2px 2px 1px #1f1f1f;
-    transition: transform 0.3s ease-out;
+    /* text-shadow: 2px 2px 1px #1f1f1f; */
+    transition: transform 0.2s ease-out;
   }
   
   .contact-details:hover {
@@ -242,5 +242,19 @@ img {
     }
     h1{
         font-size: 2rem;
+    }
+}
+
+@media(max-width: 1050px){
+    .contact-section{
+        height: 6vh;
+    }
+    .contact-details{
+        font-size: 1.4rem;
+    }
+}
+@media(max-width: 720px){
+    .contact-section{
+        height: 10vh;
     }
 }
