--- a/index.css
+++ b/index.css
@@ -40,41 +40,38 @@ img {
     max-width: 100vw;
 }
 
-.nav {
+nav {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    background: black;
-    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
+    background: black; 
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.4);
     z-index: 10;
 }
 
-.nav-list {
+nav {
     display: flex;
-    margin: 0;
     margin-right: 2rem;
 }
 
 @media (max-width: 1050px) {
-    .nav {
-        justify-content: center;
-    }
-    .nav-list {
-        margin: 0 1rem;
-        margin-right:3rem;
+    nav {
+        display: flex;
+        justify-content: space-around;
+        margin-right:2rem;
     }
 }
 
-.nav-list a {
+nav a {
     display: block;
     font-size: 2.0rem;
     padding: 0.3rem;
 }
 
-.nav-list a:hover {
+nav a:hover {
     background: rgba(78, 184, 233, 0.774);
 }
 
@@ -110,14 +107,7 @@ img {
     border-radius: 100%;
 }
 
-.box {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: start;
-    border: 2px solid rgb(255, 255, 255);
-    flex-basis: content;
-}
+
 
 .title_box {
     border: #ffffff00 10px double;
