--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ h1 {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     text-align: center;
-    font-size: 3rem;
+    font-size: 4rem;
 }
 
 
@@ -42,7 +42,7 @@ img {
 
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     position: fixed;
     top: 0;
     left: 0;
@@ -52,7 +52,7 @@ nav {
     z-index: 10;
 }
 
-nav {
+nav{
     display: flex;
     margin-right: 2rem;
 }
@@ -60,14 +60,14 @@ nav {
 @media (max-width: 1050px) {
     nav {
         display: flex;
-        justify-content: space-around;
-        margin-right:2rem;
+        justify-content: flex-end;
+        margin-right:5rem;
     }
 }
 
 nav a {
     display: block;
-    font-size: 2.0rem;
+    font-size: 1.4rem;
     padding: 0.3rem;
 }
 
@@ -86,7 +86,7 @@ nav a:hover {
 .flexbox-row {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -102,8 +102,8 @@ nav a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 25vw;
-    height: 25vw;
+    width: 20vw;
+    height: 20vw;
     border-radius: 100%;
 }
 
@@ -162,9 +162,9 @@ nav a:hover {
     margin-bottom: 2rem;
 }
 
-@media (max-width: 32.0em) {
+@media (max-width: 1050px) {
     .projects-section {
-        padding: 1rem;
+        padding: -1rem;
     }
     .projects-grid {
         grid-template-columns: 1fr;
@@ -217,9 +217,12 @@ nav a:hover {
     flex-wrap: wrap;
   }
   .contact-details {
-    font-size: 1.7rem;
+    font-size: 2.7rem;
     /* text-shadow: 2px 2px 1px #1f1f1f; */
     transition: transform 0.2s ease-out;
+  }
+  .contact-details:hover{
+      color: blue;
   }
   
   .contact-details:hover {
@@ -228,19 +231,30 @@ nav a:hover {
 
 @media(max-width: 1050px){
     h2{
-        font-size: 1.4rem;
+        font-size: 2.2rem;
     }
     h1{
-        font-size: 2rem;
+        font-size: 3rem;
+    }
+    .item {
+        width: 40vw;
+        height: 40vw;
+        border-radius: 100%;
+    }
+    .title_box #title{
+        font-size: 2.6rem;
+    }
+    #content {
+        font-size: 20px;
     }
 }
 
 @media(max-width: 1050px){
     .contact-section{
-        height: 6vh;
+        height: 7vh;
     }
     .contact-details{
-        font-size: 1.4rem;
+        font-size: 2.4rem;
     }
 }
 @media(max-width: 720px){
