--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #595953;
@@ -7,18 +8,14 @@ body {
     line-height: 1.4;
     color: rgb(255, 255, 255);
 }
-
 h1 {
     display: flex;
     justify-content: center;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     text-align: center;
-    font-size: 4rem;
+    font-size: 3rem;
 }
-
-
-
 h2 {
     font-size: 3.2rem;
 }
@@ -54,7 +51,7 @@ nav {
 
 nav{
     display: flex;
-    margin-right: 2rem;
+    margin-right: 10rem;
 }
 
 @media (max-width: 1050px) {
@@ -66,9 +63,10 @@ nav{
 }
 
 nav a {
-    display: block;
-    font-size: 1.4rem;
-    padding: 0.3rem;
+    display: flex;
+    margin: 4 20px;
+    font-size: 1.6rem;
+    padding: -0.2rem;
 }
 
 nav a:hover {
@@ -78,7 +76,7 @@ nav a:hover {
 #welcome-title {
     display: flex;
     justify-content: center;
-    padding-top: 3.2rem;
+    padding-top: 2.2rem;
     display: flex;
     margin: 20px;
 }
@@ -141,11 +139,12 @@ nav a:hover {
     max-width: 640px;
     margin: 0 auto 1rem auto;
     border-bottom: 0.1rem solid rgb(255, 255, 255);
+    font-size: 5rem;
 }
 
 @media (max-width: 1050px) {
     .projects-section-header {
-        font-size: 2rem;
+        font-size: 4rem;
     }
 }
 
@@ -228,24 +227,33 @@ nav a:hover {
   .contact-details:hover {
     transform: translateY(8px);
   }
+  #contact-title{
+      font-size: 40px;
+  }
+  #contact-text{
+      font-size: 30px;
+  }
 
 @media(max-width: 1050px){
     h2{
         font-size: 2.2rem;
     }
     h1{
-        font-size: 3rem;
+        font-size: 2.2rem;
     }
     .item {
-        width: 40vw;
-        height: 40vw;
+        width: 35vw;
+        height: 35vw;
         border-radius: 100%;
     }
     .title_box #title{
-        font-size: 2.6rem;
+        font-size: 30px;
     }
     #content {
-        font-size: 20px;
+        font-size: 23px;
+    }
+    p{
+        font-size: 25px;
     }
 }
 
@@ -254,7 +262,7 @@ nav a:hover {
         height: 7vh;
     }
     .contact-details{
-        font-size: 2.4rem;
+        font-size: 5.4rem;
     }
 }
 @media(max-width: 720px){
